# word_counting

./: .gitignore  CMakeLists.txt  README.md  block_cvc_words.txt  in.txt
bench/: CMakeLists.txt  word_counting_bench.cpp
cmake/Modules/: FindMath.cmake
include/: widget.h
include/nemo/: count_primes.hh
include/word_counting/: database.hpp  load_query.hpp  word_counting.hpp
src/: CMakeLists.txt  any.cpp  database.cpp  decltype.cpp  driver.cpp  euler_lagrange.cpp  load_query.cpp  main.cpp  manipulation.cpp  move.cpp  pinch.cpp  variant.cpp  widget.cpp  word_counting.cpp  word_counting_driver.cpp
test/: CMakeLists.txt  word_counting_test.cpp
